--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.28.2",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.5"
@@ -51,7 +52,6 @@
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.11",
     "vue": "^2.5.21",
-    "vue-router": "^3.0.2",
-    "webpack-bundle-analyzer": "^3.0.3"
+    "vue-router": "^3.0.2"
   }
 }
