--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js --progress",
     "build:dev": "cross-env NODE_ENV=development webpack --progress --config build/webpack.dev.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.js",
-    "hmr": "cross-env NODE_ENV=development webpack-dev-server --content-base ./dist"
+    "hmr": "cross-env NODE_ENV=development webpack-dev-server --content-base ./dist",
+    "dll": "cross-env NODE_ENV=production webpack --config build/webpack.dll.js --progress"
   },
   "author": "",
   "license": "ISC",
